# agrivoltaic-regulation

./: .gitignore  CLAUDE.md  README.md  agrivoltaics_bavaria_project.md  pyproject.toml
app/: main.py
data/processed/: slope_class.tif
data/raw/E1_land_use/U2018_CLC2018_V2020_20u1.shp/: U2018_CLC2018_V2020_20u1.dbf  U2018_CLC2018_V2020_20u1.shx
data/raw/E2_conservation_areas/biosphaerenreservate_epsg25832_shp/: biosphaerenreservate_epsg25832_shp.dbf  biosphaerenreservate_epsg25832_shp.shp  biosphaerenreservate_epsg25832_shp.shx
data/raw/E2_conservation_areas/landschaftsbestandteil_flaechig_epsg25832_shp/: landschaftsbestandteil_flaechig_epsg25832_shp.dbf  landschaftsbestandteil_flaechig_epsg25832_shp.shp  landschaftsbestandteil_flaechig_epsg25832_shp.shx
data/raw/E2_conservation_areas/landschaftsbestandteil_punktfoermig_epsg25832_shp/: landschaftsbestandteil_punktfoermig_epsg25832_shp.dbf  landschaftsbestandteil_punktfoermig_epsg25832_shp.shp  landschaftsbestandteil_punktfoermig_epsg25832_shp.shx
data/raw/E2_conservation_areas/lsg_epsg25832_shp/: lsg_epsg25832_shp.dbf  lsg_epsg25832_shp.shx
data/raw/E2_conservation_areas/nationale_naturmonumente_epsg25832_shp/: nationale_naturmonumente_epsg25832_shp.dbf  nationale_naturmonumente_epsg25832_shp.shp  nationale_naturmonumente_epsg25832_shp.shx
data/raw/E2_conservation_areas/naturdenkmal_flaechig_epsg25832_shp/: naturdenkmal_flaechig_epsg25832_shp.dbf  naturdenkmal_flaechig_epsg25832_shp.shp  naturdenkmal_flaechig_epsg25832_shp.shx
scripts/: preprocess.py  test_datasets.py  verify_processed.py
(+22 files in other folders)
