[project]
name = "agrivoltaic-screening"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0",
    "rasterio>=1.3",
    "fiona>=1.10",
    "numpy>=2.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "streamlit>=1.35",
    "streamlit-folium>=0.20",
    "folium>=0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.uv]
package = false
