[project]
name = "agrivoltaic-screening"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0",
    "pyogrio>=0.9",
    "shapely>=2.0",
    "pyproj>=3.6",
    "streamlit>=1.35",
    "streamlit-folium>=0.20",
    "folium>=0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.uv]
package = false
